objects/DMAPP__Call_Plan_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Call_Plan__c</fullName>
        <label>Call Plan</label>
        <referenceTo>DMAPP__Call_Plan__c</referenceTo>
        <relationshipLabel>Call Plan High Yield Questions</relationshipLabel>
        <relationshipName>Call_Plan_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Political Map Contact</label>
        <referenceTo>DMAPP__DM_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Call Plan High Yield Questions</relationshipLabel>
        <relationshipName>Call_Plan_High_Yield_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Plan High Yield Question</label>
    <nameField>
        <label>Call Plan Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Plan High Yield Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>